# obvia

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  GUIDELINES.md  Jenkinsfile  README.md
backend/: .gitignore  Cargo.toml  Dockerfile
backend/config/: .gitignore  default.toml.example
backend/lib/: Cargo.toml
backend/lib/src/: lib.rs
backend/lib/src/app/: app_state.rs  config.rs  database.rs  init.rs  mod.rs  services.rs
backend/lib/src/auth/: handler.rs  middleware.rs  mod.rs  repository.rs  routes.rs  service.rs  tests.rs
backend/lib/src/common/: dto.rs  error.rs  macros.rs  mod.rs  model.rs  repository.rs  services.rs
backend/lib/src/manager/: mod.rs
backend/lib/src/organizational_units/: dto.rs  handler.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs
backend/lib/src/tenant/: mod.rs
backend/lib/src/tenants/: dto.rs  handler.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs
backend/lib/src/users/: mod.rs  model.rs  repository.rs
backend/migrations/: 20250530152448_create_companies_and_user_companies_table.down.sql  20250530152448_create_companies_and_user_companies_table.up.sql
backend/migrations/main/: 20250530142325_create_base_data_structure.down.sql  20250530142325_create_base_data_structure.up.sql  20250530142325_create_users_table.down.sql  20250530142325_create_users_table.up.sql  20250530152448_create_companies_and_user_companies_table.up.sql  20250530152448_create_tenants_and_user_tenants_table.down.sql  20250530152448_create_tenants_and_user_tenants_table.up.sql  20251202195436_create_email_verifications_table.down.sql  20251202195436_create_email_verifications_table.up.sql  20251209183130_create_forgotten_password_table.down.sql  20251209183130_create_forgotten_password_table.up.sql  20251217122037_create_refresh_tokens_table.down.sql  20251217122037_create_refresh_tokens_table.up.sql  20251219093515_create_account_event_logs_table.down.sql  20251219093515_create_account_event_logs_table.up.sql  20260114093532_add_2fa_columns_to_users_table.down.sql  20260114093532_add_2fa_columns_to_users_table.up.sql  20260617050234_add_timezone_column_to_users_table.up.sql
backend/migrations/tenant/: 20250731094313_create_test_table.down.sql  20250731094313_create_test_table.up.sql  20250826093353_create_base_data_structure.down.sql  20250826093353_create_base_data_structure.up.sql  20251018083051_improved_inventory_tables.down.sql  20251018083051_improved_inventory_tables.up.sql  20251027155445_recreate_tasks_table.down.sql  20251027155445_recreate_tasks_table.up.sql  20251027171736_recreate_worksheets_table.down.sql  20251027171736_recreate_worksheets_table.up.sql  20260618151046_add_not_null_to_products_table_created_at_and_updated_at.down.sql  20260618151046_add_not_null_to_products_table_created_at_and_updated_at.up.sql
backend/src/: lib.rs  main.rs
backend/src/app/: mod.rs
backend/src/auth/: dto.rs  error.rs  handler.rs  middleware.rs  mod.rs  repository.rs  routes.rs  service.rs  tests.rs
backend/src/auth/dto/: claims.rs  login.rs  mod.rs  register.rs
backend/src/common/: database.rs  dto.rs  error.rs  extractors.rs  handler.rs  init.rs  macros.rs  mod.rs  pdf.rs  query_parser.rs  service.rs  utils.rs  value_object.rs
backend/src/common/config/: auth_config.rs  database_config.rs  mail_config.rs  mod.rs  server_config.rs
backend/src/common/extractors/: client_context.rs  client_ip.rs  mod.rs  user_input.rs  valid_json.rs
backend/src/common/types/: currency_code.rs  db_host.rs  db_name.rs  db_password.rs  db_port.rs  db_user.rs  ddl_parameter.rs  email.rs  empty.rs  empty_filter_by.rs  empty_order_by.rs  first_name.rs  float64.rs  integer32.rs  last_name.rs  mod.rs  order.rs  password.rs  positiveinteger32.rs  quantity.rs  uuid.rs  value_object.rs  value_object_new.rs
backend/src/common/utils/: serde_error.rs
backend/src/manager/: mod.rs
backend/src/manager/app/: config.rs  database.rs  init.rs  mod.rs  services.rs
backend/src/manager/auth/: handler.rs  middleware.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs
backend/src/manager/tenants/: dto.rs  handler.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs
backend/src/manager/users/: handler.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs
backend/src/tenant/: mod.rs
backend/src/tenant/activity_feed/: dto.rs  handler.rs  (+5 more)
backend/src/users/: dto.rs  mod.rs  repository.rs  routes.rs  service.rs
backend/templates/: customer_view.typ  inventory_movement_view.typ  inventory_reservation_view.typ  inventory_view.typ  product_view.typ  service_view.typ  task_view.typ  tax_view.typ  warehouse_view.typ  worksheet_view.typ
backend/testing/pdf/: snapshot_all.sh
(+787 files in other folders)
