[package]
name = "obvia_backend"
version = "0.23.1"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.12.2", features = ["cookie", "cookie-key-expansion", "cookie-private", "cookie-signed", "typed-header"] }
jsonwebtoken = { version = "10.0.0", features = ["aws_lc_rs"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
async-trait = "0.1.88"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono", "bigdecimal"] }
chrono = { version = "0.4.41", features = ["serde"] }
anyhow = "1.0.98"
thiserror = "2.0.12"
argon2 = "0.5.3"
config = "0.15.11"
headers = "0.4.1"
regex = "1.11.1"
rand = "0.9.2"
tower-http = { version = "0.6.6", features = ["trace"] }
tower = { version = "0.5.2", features = ["full"] }
bigdecimal = { version = "0.4.8", features = ["serde", "serde-json"] }
handlebars = "6.3.2"
lettre = { version = "0.11.19", default-features = false, features = ["builder", "hostname", "smtp-transport","tokio1", "tokio1-rustls-tls"] }
time = "0.3.44"

[dev-dependencies]
pretty_assertions = "1.4.1"
mockall = "0.14.0"

[package.metadata]
clippy = { deny = ["unsafe_code"] }
