[package]
name = "backend_lib"
version = "0.1.1"
edition = "2024"

[dependencies]
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["cookie", "cookie-key-expansion", "cookie-private", "cookie-signed", "typed-header"] }
jsonwebtoken = { version = "9.3.1", features = ["use_pem"] }
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
uuid = { version = "1.17.0", features = ["v4", "serde"] }
async-trait = "0.1.88"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
chrono = { version = "0.4.41", features = ["serde"] }
anyhow = "1.0.98"
thiserror = "2.0.12"
argon2 = "0.5.3"
config = "0.15.11"
headers = "0.4.1"
regex = "1.11.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
mockall = "0.13.1"
